fix: update favicon to brand logo with cache-busting

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,8 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/favicon-logo.png"
+  [headers.values]
+    Cache-Control = "no-cache, no-store, must-revalidate"
